# Lilith-Virtual-Keyboard

./: README.md  draw_hotspots.py  fix_map.py  generate_map.py  index.html  package-lock.json  package.json
src/: README.md  new_map.txt  script.js  style.css  test_coords.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
